<resources>
    <string name="app_name">Agza5ana</string>
    <string name="title_home">Home</string>
    <string name="title_offers">Offers</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="personalinfo">Personal Info</string>
    <string name="signup_name">Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_phonenumber">Phone number</string>
    <string name="signup_password">Password</string>
    <string name="signup_submit">Submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search">Search</string>
</resources>