<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:orientation="vertical">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/background">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:background="@drawable/signup_photo_shape"
            android:src="@drawable/ic_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


    <TextView
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="40dp"
        android:text="@string/personalinfo"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_name"
            android:outlineSpotShadowColor="@color/light_blue"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_weight="1"/>

        </LinearLayout>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_email"
            android:outlineSpotShadowColor="@color/light_blue"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_phonenumber"
            android:outlineSpotShadowColor="@color/light_blue"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/signup_password"
            android:inputType="textPassword"
            android:outlineAmbientShadowColor="@color/light_blue"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/signup_submit"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:background="@drawable/buttons"
            android:layout_marginTop="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>


    </LinearLayout>

</LinearLayout>